<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BmiActivity">

    <TextView
        android:id="@+id/TextViewBMI"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="64dp"
        android:text="@string/ReturnBMI"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/EnterWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.163" />

    <EditText
        android:id="@+id/EnterWeight"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/EnterWeight"
        app:layout_constraintBottom_toTopOf="@+id/EnterHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/EnterHeight"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/EnterHeight"
        app:layout_constraintBottom_toTopOf="@+id/CalculateBMI"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/CalculateBMI"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginBottom="32dp"
        android:text="@string/CalculateBMI"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>